tests/language_modules/04_types/invalid_semantics/keyword_local_name.vf
module KeywordLocalName

procedure main()
is
    let module: Integer = 0
    check true
end main

end KeywordLocalName